--- a/inc/lang/fr/MySB_UpdateTools.lng
+++ b/inc/lang/fr/MySB_UpdateTools.lng
@@ -23,6 +23,7 @@
 ##################### FIRST LINE #####################################
 
 UpdateTools_Plex=("Mise à jour de Plex Media Server & Tautulli")
+UpdateTools_SickChill=("Mise à jour de SickChill")
 UpdateTools_DockerTools=("Mise à jour des outils Docker")
 UpdateTools_DNScrypt=("Mise à jour de DNScrypt-proxy")
 UpdateTools_Minio=("Mise à jour des outils S3")
