--- a/inc/lang/fr/Questions.lng
+++ b/inc/lang/fr/Questions.lng
@@ -157,6 +157,7 @@ Summary_ServerProvider="${CBLUE}Fournisseur (supervision) : ${CEND}"
 Summary_SeedboxManager="${CBLUE}Installer Seedbox-Manager : ${CEND}"
 Summary_Cakebox="${CBLUE}Installer Cakebox-Light : ${CEND}"
 Summary_PlexMedia="${CBLUE}Installer Plexmedia Server : ${CEND}"
+Summary_SickChill="${CBLUE}Installer SikChill : ${CEND}"
 Summary_Webmin="${CBLUE}Installer Webmin : ${CEND}"
 Summary_WebminPort="${CBLUE}Port pour Webmin : ${CEND}"
 Summary_NextCloud="${CBLUE}Installer NextCloud : ${CEND}"
@@ -193,7 +194,7 @@ export Questions_Message_Blocklists_0 Questions_Message_Blocklists_1 Questions_I
 export Questions_Message_Statistics Questions_SendStatistics
 export Summary_Language Summary_MainUser Summary_MainUserPass Summary_SmtpProvider Summary_SmtpUsername Summary_SmtpPassword Summary_MainUserMail
 export Summary_TimeZone Summary_PrimaryInet Summary_SrvIpAddress Summary_SrvIpAddressExt Summary_gsHostNameFqdn Summary_PortHTTPs Summary_Port_SSH Summary_Port_FTP
-export Summary_ServerProvider Summary_SeedboxManager Summary_Cakebox Summary_PlexMedia Summary_Webmin Summary_WebminPort Summary_NextCloud Summary_OpenVPN
+export Summary_ServerProvider Summary_SeedboxManager Summary_Cakebox Summary_PlexMedia Summary_SickChill Summary_Webmin Summary_WebminPort Summary_NextCloud Summary_OpenVPN
 export Summary_gsOpenVPN_Proto Summary_OpenVPN_WithGW Summary_OpenVPN_WithoutGW Summary_OpenVPN_TAP_WithoutGW
 export Summary_HttpPortOpend Summary_IpRestriction Summary_MainUserIPs Summary_InstallLogWatch Summary_InstallFail2Ban Summary_InstallDNScrypt Summary_PeerBlock
 export Summary_Statistics Summary_ConfirmMessage Summary_Confirm
