--- a/inc/lang/en/Questions.lng
+++ b/inc/lang/en/Questions.lng
@@ -99,6 +99,7 @@ Questions_ServerProvider="What is your server provider ? "
 Questions_InstallSeedboxManager="Do you want to install Seedbox-Manager (only in french) ? (${Global_YES}/${Global_NO}) "
 Questions_InstallCakeBox="Do you want to install CakeBox Light ? (${Global_YES}/${Global_NO}) "
 Questions_InstallPlexMedia="Do you want to install Plex Media Server ? (${Global_YES}/${Global_NO}) "
+Questions_InstallSickChill="Do you want to install SickChill ? (${Global_YES}/${Global_NO}) "
 Questions_InstallWebmin="Do you want to install Webmin ? (${Global_YES}/${Global_NO}) "
 Questions_PortWebmin="Webmin port (usually 10000): "
 Questions_InstallOpenVPN="Do you want to install OpenVPN ? (${Global_YES}/${Global_NO}) "
@@ -156,6 +157,7 @@ Summary_Port_FTP="${CBLUE}FTPs port : ${CEND}"
 Summary_ServerProvider="${CBLUE}Provider (monitoring) : ${CEND}"
 Summary_SeedboxManager="${CBLUE}Install Seedbox-Manager : ${CEND}"
 Summary_Cakebox="${CBLUE}Install Cakebox-Light : ${CEND}"
+Summary_SickChill="${CBLUE}Install SickChill : ${CEND}"
 Summary_PlexMedia="${CBLUE}Install Plexmedia Server : ${CEND}"
 Summary_Webmin="${CBLUE}Install Webmin : ${CEND}"
 Summary_WebminPort="${CBLUE}Webmin port : ${CEND}"
@@ -186,7 +188,7 @@ export Questions_Message_LetsEncrypt Questions_HttpOpened Questions_Message_IpRe
 export Questions_Message_SMTP_0 Questions_SMTP Questions_SMTP_Username Questions_SMTP_Password Questions_Message_SMTP_1 Questions_EmailAddress Questions_TimeZone
 export Questions_PrimaryNetwork Questions_BoxIpAddress Questions_BoxIpAddressAdditional Questions_BoxIpAddressExt
 export Questions_PortHTTP Questions_PortHTTPs Questions_PortSSH Questions_PortFTPs Questions_PortFTPData Questions_Message_ServerProvider
-export Questions_ServerProvider Questions_InstallSeedboxManager Questions_InstallCakeBox Questions_InstallPlexMedia Questions_InstallWebmin Questions_PortWebmin
+export Questions_ServerProvider Questions_InstallSeedboxManager Questions_InstallCakeBox Questions_InstallPlexMedia Questions_InstallSickChill Questions_InstallWebmin Questions_PortWebmin
 export Questions_InstallOpenVPN Questions_PortOpenvpnTUNwithGW Questions_PortOpenvpnTUNwithoutGW Questions_PortOpenvpnTAPwithoutGW Questions_ProtoOpenVPN
 export Questions_InstallNextCloud Questions_ContinueInstall Questions_InstallLogwatch Questions_InstallFail2Ban Questions_Message_Blocklists
 export Questions_Message_Blocklists_0 Questions_Message_Blocklists_1 Questions_InstallBlockList_0 Questions_InstallBlockList_1 Questions_InstallDNScrypt
@@ -196,5 +198,5 @@ export Summary_TimeZone Summary_PrimaryInet Summary_SrvIpAddress Summary_SrvIpAd
 export Summary_ServerProvider Summary_SeedboxManager Summary_Cakebox Summary_PlexMedia Summary_Webmin Summary_WebminPort Summary_NextCloud Summary_OpenVPN
 export Summary_gsOpenVPN_Proto Summary_OpenVPN_WithGW Summary_OpenVPN_WithoutGW Summary_OpenVPN_TAP_WithoutGW
 export Summary_HttpPortOpend Summary_IpRestriction Summary_MainUserIPs Summary_InstallLogWatch Summary_InstallFail2Ban Summary_InstallDNScrypt Summary_PeerBlock
-export Summary_Statistics Summary_ConfirmMessage Summary_Confirm
+export Summary_Statistics Summary_ConfirmMessage Summary_Confirm Summary_SickChill
 ##################### LAST LINE ######################################
